V5.2.0
* Fixed NPE error with player where Essentials Money is null
V5.1.9
* Hungarian language file added. Thanks to @Toldi
* Added getEssentialsBalance and setEssentialsBalance to EssentialsCompat.
V5.1.8
* MobHunting & BagOfGold Released. BagOfGold is now a real Economy, which can be used like any other Economy (Essentials, CraftConomy, Gringotts,...)
V5.1.7
* New command "/mh money", "/mh money balance", "/mh money balance playername" to get the amount of BagOfGold in the players inventory
* Added new placeholder '%mobhunting_balance%'
* Upgrade to MobHunting database V5 (Added new fields to mh_Players)  
* PlaceHolders from PlacerHolderAPI can be used in the language files now. 
* Added Hidden data to store Skin UUID for player and mobs for better skin persistence.
* Fixed bug (https://www.spigotmc.org/threads/mobhunting.46937/page-143#post-2722870)
* Re-added support for StackMob 2.0.9+ after compatibility was broken.
* bStats updated to V1.2
V5.1.6
* Added support for PlaceHolderAPI. (https://www.spigotmc.org/resources/placeholderapi.6245/)
* Placedholders added: %mobhunting_rank% (Only updated when leaderboards is updated), %mobhunting_total_kills%, %mobhunting_total_cash%, %mobhunting_droped_money%, %mobhunting_dropped_rewards%
* Fixed Ticket 317 (https://github.com/Rocologo/MobHunting/issues/317)
* Fixed ticket 309 (https://github.com/Rocologo/MobHunting/issues/309)
V5.1.5
* Fixed Ticket 307. (https://github.com/Rocologo/MobHunting/issues/307)
* Fixed NPE bug, when using command /mh happyhour
* Fix bug on servers using a Java version where String.format uses a "," instead of a "." when formatting numbers.
* Fixed ticket 313. (https://github.com/Rocologo/MobHunting/issues/313) 
* You now click on any head and get the Owner (if it is not a custom texture head, without an owner)
V5.1.4
* Fixed bug on MC 1.8 servers, where BagOfGold signs dit not clear the slot if the bag was completely sold.
V5.1.3