@@ -1,4 +1,5 @@
 V5.2.0
+* Fixed BagOfGold balance bug when player is in creative mode.
 * Fixed NPE error with player where Essentials Money is null
 V5.1.9
 * Hungarian language file added. Thanks to @Toldi
